<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:orientation="vertical" android:id="@+id/main_layout"
>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:autofillHints="no"
            android:hint="@string/edit_text_hint"

            android:minHeight="48dp"
            android:ems="10"
            android:id="@+id/edit_text"
            tools:ignore="TextContrastCheck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintBottom_toTopOf="@+id/tableLayout3"
            app:layout_constraintTop_toTopOf="parent"/>
    <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/tableLayout3">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginBottom="40dp" android:layout_marginVertical="40dp">
            <Button
                    android:text="@string/black_font_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_black"
                    android:layout_weight="1" android:layout_marginHorizontal="15dp"/>
            <Button
                    android:text="@string/red_font_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_red"
                    android:layout_weight="1.0" android:layout_marginHorizontal="15dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginBottom="40dp">
            <Button
                    android:text="@string/size_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/size_8"
                    android:layout_weight="1" android:layout_marginHorizontal="15dp"/>
            <Button
                    android:text="@string/size_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/size_24"
                    android:layout_weight="1" android:layout_marginHorizontal="15dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginBottom="40dp">
            <Button
                    android:text="@string/white_back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/back_white"
                    android:layout_weight="1" android:layout_marginHorizontal="15dp"/>
            <Button
                    android:text="@string/yellow_back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/back_yellow"
                    android:layout_weight="1" android:layout_marginHorizontal="15dp"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>